Grace/tests/gibbs/errors/t111.grace
// ERROR = P1004
type Thing = {
    stuff otherStuff
}
